--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
 </div>   
 <br><br>
 <button class="btn btn-success" onclick="startGame()" id="start">Play Game</button>
+<button class="btn btn-danger" onclick="restartGame()" id="restart">Restart Game</button>
+
 <br><br>
 <h4 class="btn btn-warning" id="status"></h4>
 <br><br>
 <div id="canvas"></div>
-  
+<br><br>
+<h4 id="copy-right-footer">Made by Roshan</h4>
+</center>
+ 
+
+</body>
+</html>
